# compilers

./: .gitignore  CMakeLists.txt  README.md
lexer/: CMakeLists.txt  Makefile  dana_lexer  dana_lexer.l  lexer.l
lexer/test/indented_programs/: bubble.dna  pinakes.dna  worBox.dna
lexer/test/orig_indented_programs/: length.dna  prwtoi.dna  reverse.dna  worBox.dna
lexer/test/unindented_programs/: prwtoi.txt
llvm/: 23loop_ir.ll  CMakeLists.txt  ast.cpp  ast.h  ast.hpp  ast_sem.cpp  ast_sem.h  auxiliary.cpp  auxiliary.h  create_our_libs.sh  dana  danalib.c  lexer.l  logger.cpp  logger.h  our_libs.c  our_libs.cpp  our_libs.h  parser_indent.y  parser_unindent.y  symbol.c  symbol.h  symbtest.c  todo.md
llvm/llc_test/: 1.ll  2.ll  a.ll  a.s  b.ll  bubble_asm.s  bubble_ir.ll  bubble_ir_opt.ll  cheating_boolean_tree_ir.ll  do.sh  hanoi_asm.s  hanoi_ir.ll  hanoi_ir_opt.ll  hello_asm.s  hello_ir.ll  hello_ir_opt.ll  input.txt  ir.ll  ir_opt.ll  minimum_scalar_product_asm.s  minimum_scalar_product_ir.ll  minimum_scalar_product_ir_opt.ll  my_example_ir.ll  perm_rle_asm.s  perm_rle_ir.ll  perm_rle_ir_opt.ll  prwtoi_asm.s  prwtoi_ir.ll  prwtoi_ir_opt.ll  reverse_asm.s  reverse_ir.ll  reverse_ir_opt.ll  save_universe_asm.s  save_universe_ir.ll  save_universe_ir_opt.ll  skip_asm.s  skip_input.txt  skip_ir.ll  skip_ir_opt.ll  t.ll  (+5 more)
llvm/test/fail/: 02refpar.dna  05numarg.dna  06dupvar.dna  08unfcom.dna  14addarr.dna  18nocond.dna  19badres.dna  20badres.dna  23loop.dna  24arrpar.dna  30twopr.dna  32byte.dna  43longid.dna  46predef.dna  50revers.dna  63gcd.dna  66pretty.dna
llvm/test/gcj2008/: cheating_boolean_tree.dna  dana_indent  minimum_scalar_product.dna  minimum_scalar_product1.in  perm_rle.dna  save_universe.dna  text_messaging_outrage.dna  triangle_areas.dna
llvm/test/indented/: bubble.dna  hello.dna  length.dna  pinakes.dna  prwtoi.dna  reverse.dna  skip.dna  string.dna  vizener.dna  wordBox.dna
llvm/test/indented_programs/: bubble.dna  hanoi.dna  length.dna  pinakes.dna  prwtoi.dna  skip.dna  string.dna  to_be_checked.txt  vizener.dna  wordBox.dna
llvm/test/orig_indented_programs/: arrayTr.dna  hello.dna
llvm/test/programs/: pinakes.dna  prwtoi.dna  vizener.dna  worBox.dna
llvm/test/results/: .~lock.results.xlsx#  results.xlsx
llvm/test/results/Correct/: 01empty.dna  03add.dna  08scope.dna  09array.dna  10func.dna  11fact.dna  15else.dna  16else.dna  19array.dna  20mute.dna  25hanoi.dna  26bsort.dna  27prime.dna  29revers.dna  31fact.dna  35char.dna  36char.dna  37difvar.dna  39cond.dna  40erat.dna  41else.dna  42number.dna  44comp.dna  45over.dna  51samnst.dna  52pasmod.dna  53char.dna  54loop.dna  60hanoi.dna  61primes.dna  62divis.dna  64fib.dna  65swap.dna  67qsort.dna  68cancer.dna  69bsort.dna
llvm/test/results/Wrong/: 01comm.dna  03dupfun.dna  04dupfun.dna  07unfstr.dna  09empty.dna  10assign.dna  11nonarr.dna  12lexerr.dna  13addfun.dna  16noint.dna  17cond.dna  21badres.dna  22badres.dna
llvm/test/unindented_programs/: hanoi.txt  hello.txt  prwtoi.txt  reverse.txt
minibasic/: .Makefile.un~  .lexer.l.un~  .parser.y.un~
minibasic/examples/: .count.mba.un~  .count_decl.mba.swp  .count_decl.mba.un~  .error.mba.un~  .fib.mba.un~  .hello.mba.un~  .lexerror.mba.un~  .multbl.mba.un~  .vim.un~  count.mba  count_decl.mba  count_decl.mba~  fib.mba  lexerror.mba  multbl.mba  vim~
minibasic/interpreter/: .Makefile.un~  .lexer.l.un~  .parser.y.un~  Makefile  ast.c  ast.h  lexer.c  lexer.l  minibasic  parser.c  parser.h  parser.y
minibasic/lexer/: .Makefile.un~  .lexer.l.un~  Makefile  lexer.c  lexer.l  minibasic
minibasic/parser/: Makefile  lexer.c  lexer.l  minibasic  parser.c  parser.h  parser.output  parser.y
minibasic/semantic/: .Makefile.un~  .ast.h.swp  .lexer.l.un~  .parser.y.un~  Makefile  ast.h  error.c  general.c  lexer.l  minibasic  parser.y  symbol.c  symbol.h  symbol2.c
parser/: CMakeLists.txt  Makefile  dana_indent  dana_lexer_for_parser.l  dana_parser_indent.y  dana_unindent  lexer.l  parser.h  parser_indent.y  parser_unindent.y
parser/test/indented_programs/: reverse.dna
parser/test/orig_indented_programs/: string.dna
semantic/: CMakeLists.txt  Makefile  ast.c  dana_parser_indent.y  dana_parser_unindent.y  parser_unindent.y
semantic/test/gcj2008/: triangle_areas.dna
semantic/test/indented_programs/: prwtoi.dna
semantic/test/unindented_programs/: bubble.txt
semantics/: ast.c  build.sh
semantics/bonus-1.0/: symbol.c  symbol.h
semantics/src/: .ast.c.swp  .ast.h.swp  .dana_parser_unindent.y.swp  Link to my_example.txt  Makefile  ast.c  ast.h  build.sh  dana  dana_parser_indent.y  dana_parser_unindent.y  lexer.l  minibasic  symbol.c
semantics/src/gcj2008/: Makefile  cheating_boolean_tree.dna  minimum_scalar_product.dna  text_messaging_outrage.dna
semantics/src/indented_programs/: arrayTr.dna  hanoi.dna  length.dna  reverse.dna  worBox.dna
semantics/src/unindented_programs/: bubble.txt  hanoi.txt
semantics/tests/gcj2008/: perm_rle.dna  save_universe.dna  triangle_areas.dna
semantics/tests/indented_programs/: string.dna
semantics/tests/unindented_programs/: decl_libraries  my_example.txt
test/: parser_u
test/gcj2008/: cheating_boolean_tree1.in  dana_unindent  minimum_scalar_product.dna  save_universe.dna
test/indented_programs/: bubble.dna  hanoi.dna  length.dna  pinakes.dna  vizener.dna
test/v2/programs/: aux.dna  dana_indent
testcases/gcj2008/: cheating_boolean_tree.dna  triangle_areas2.out
testcases/indented_programs/: prwtoi.dna  vizener.dna
testcases/indented_programs/Untitled Folder/: hanoi.dna.orig
testcases/unindented_programs/: my_example.txt
testcases/v2/programs/: .aux.dna.un~  .hanoi.dna.un~  .pinakes.dna.un~  arrayTr.dna~  bubble.dna~  minibasic  pinakes.dna~  simple_array.dna  string.dna  vizener.dna~
